# ReturnIQ

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_WALKTHROUGH.md  Dockerfile  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy_hf.yml  main.yml
deploy/: README.md  app.py  requirements.txt  style.css
deploy/data/processed/: final_dashboard_data.parquet
deploy/data/sample/: dashboard_sample.parquet
deploy/src/: README.md  build_db.py  causal_model.py  cohorts.py  constants.py  covariate_balance.py  diff_in_diff.py  ingest.py  positivity_check.py  seller_features.py  ui_helpers.py  variance_decomp.py
deploy/streamlit_app/: app.py
deploy/views/: baseline_vs_causal.py  key_findings.py  methodology.py  policy_sim.py  seller_intel.py
notebooks/: 01_data_ingestion.ipynb  02_feature_engineering.ipynb  03_distilbert_finetune.ipynb  04_causal_model.ipynb  05_evaluation.ipynb  06_policy_simulator.ipynb
results/: metrics.json
scripts/: finalize_analytical_pillars.py  merge_dashboard_data.py
src/: auuc.py  causal_model.py  data_quality.py  diff_in_diff.py  narrative_agent.py  ols_baseline.py  placebo_test.py  positivity_check.py  precompute_narratives.py  rainforest_cron.py  seller_features.py  sensitivity_analysis.py  temporal_holdout.py  ui_helpers.py  variance_decomp.py
streamlit_app/: app.py  style.css
streamlit_app/views/: baseline_vs_causal.py  key_findings.py  methodology.py  policy_sim.py  seller_intel.py
tests/: conftest.py  test_causal.py  test_pipeline.py
(+3 files in other folders)
