[project]
name = "returniq"
version = "2.4.0"
description = "Causal Intelligence for Marketplace Returns"
authors = [
    {name = "Jainish Patel"}
]
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0",
    "econml>=0.14.0",
    "duckdb>=0.9.0",
    "xgboost>=2.0.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "streamlit-antd-components>=0.3.0"
]

[tool.setuptools]
packages = ["src"]
